# cad-model-analyzer

./: .env.example  .gitignore  CMakeLists.txt  README.md  build-windows.bat  check-all-dlls.bat  check-deps.bat  package-lock.json  package.json  run-analyzer.bat  run-debug.bat  smoke-build.bat  smoke.cpp  test-screw.bat
docs/: architecture.md  capability-map.md  demo-batch-screw.json  demo-report.json  demo-summary.csv  interview-demo.md  roadmap.md  technical-walkthrough.md
include/: Analysis.h  GeometryClassifier.h  JsonReport.h  QualityAssessment.h  ShapeMetrics.h  StepReader.h  TopologyCounter.h
src/: Analysis.cpp  GeometryClassifier.cpp  JsonReport.cpp  QualityAssessment.cpp  ShapeMetrics.cpp  StepReader.cpp  TopologyCounter.cpp  main.cpp
tests/: quality_assessment_tests.cpp
web/: server.js  smoke-test.js
web/public/: app.js  index.html  style.css
